# ExamenGrafica

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  package.ps1
Resource Files/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  camera.h  opengl.cpp  shader_m.h  skybox.fs  skybox.h
assimp/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake
assimp/.cmake/api/v1/reply/: cache-v2-0aee5dd2bc9b192c2320.json  cmakeFiles-v1-430f89072fdea3f28c6d.json  codemodel-v2-53dfc543aaa676267842.json  directory-.-Debug-ebd4fcee9dac98328eef.json  directory-code-Debug-19e22a250f56c80ba769.json  directory-code-MinSizeRel-fe4b4484995c3a15fa83.json  directory-code-RelWithDebInfo-43f2e45988b6a7feabe4.json  directory-code-Release-b9fef4f1d78a6278122b.json  directory-contrib.zlib-Debug-3ab906c483125b37cba5.json  directory-contrib.zlib-MinSizeRel-dddd889b3d063fe28f93.json  directory-contrib.zlib-RelWithDebInfo-073ef4c473ba094166ea.json  directory-contrib.zlib-Release-7cd9a648d09d45f80005.json  index-2026-05-31T04-20-38-0943.json  target-ALL_BUILD-MinSizeRel-b08b7d94a74eb2ceafc9.json  target-ALL_BUILD-RelWithDebInfo-984a70b22236a8f69324.json  target-UpdateAssimpLibsDebugSymbolsAndDLLs-MinSizeRel-808f282a1cfe2468343a.json  target-ZERO_CHECK-Release-ed2d122c051a89c7aa88.json  target-assimp-Debug-cbea60658dfced363957.json  target-assimp-MinSizeRel-3363b8a55655ef9b5259.json  target-assimp-RelWithDebInfo-09ddc00fa7496692d2c8.json  target-assimp-Release-5a47e9fb3eba18de18ee.json  target-uninstall-MinSizeRel-c1fce9878d66d136711a.json  target-unit-Debug-4ee0b715f30dacb323b4.json  target-unit-MinSizeRel-7f27da02f0b23d11a444.json  target-unit-RelWithDebInfo-66acd906884e27365f2d.json  target-unit-Release-0fc553a425789a102b03.json  target-zlibstatic-Debug-f0bde7deb8a3bdc295b1.json  target-zlibstatic-MinSizeRel-3d9a040f77a506b07e0c.json  target-zlibstatic-RelWithDebInfo-f2d6fecb9f779c147d9d.json  target-zlibstatic-Release-ca07b655a6b19977c435.json  toolchains-v1-90ded78b0bab2c155ccf.json
assimp/build-mingw/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake
assimp/build-mingw/code/: Makefile  cmake_install.cmake
assimp/build-mingw/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
assimp/build-mingw/include/assimp/: revision.h
assimp/build-ninja/: CMakeCache.txt
assimp/code/: cmake_install.cmake
assimp/contrib/zlib/: CTestTestfile.cmake  cmake_install.cmake
assimp/test/: cmake_install.cmake
assimp/test/headercheck/: cmake_install.cmake
glad/src/: glad.c
glad/src/include/glad/: glad.h
models/jamesanimations/: idle.fbx  jump.fbx  left strafe walking.fbx  left turn 90.fbx  right strafe walking.fbx  right turn 90.fbx  walking.fbx
models/map/model/: __auto_.tga  __auto_1.tga  __auto_2.tga  __auto_3.tga  __auto_4.tga
